--- a/src/main/resources/fxml/PersonList.fxml
+++ b/src/main/resources/fxml/PersonList.fxml
@@ -6,16 +6,18 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.PersonListController">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.171"
+          xmlns:fx="http://javafx.com/fxml/1"
+          fx:controller="ph.petrologisticscorp.finalsalary.controller.PersonListController">
     <children>
-        <ListView fx:id="personsListView" editable="true" prefHeight="200.0" prefWidth="200.0" />
+        <ListView fx:id="personsListView" editable="true" prefHeight="200.0" prefWidth="200.0"/>
         <Button mnemonicParsing="false" onAction="#random" text="Create Random" GridPane.rowIndex="1"/>
     </children>
     <columnConstraints>
-        <ColumnConstraints />
+        <ColumnConstraints/>
     </columnConstraints>
     <rowConstraints>
-        <RowConstraints />
-        <RowConstraints />
+        <RowConstraints/>
+        <RowConstraints/>
     </rowConstraints>
 </GridPane>
