--- a/src/main/resources/fxml/EmployeeList.fxml
+++ b/src/main/resources/fxml/EmployeeList.fxml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.BorderPane?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeListController">
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<BorderPane fx:id="employeeListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeListController">
     <center>
         <TableView fx:id="tableViewEmployees" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <columns>
@@ -23,15 +17,40 @@
             </columns>
         </TableView>
     </center>
-    <top>
-        <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <buttons>
-                <TextField />
-                <Button mnemonicParsing="false" text="Find" />
-            </buttons>
-        </ButtonBar>
-    </top>
-    <padding>
-        <Insets bottom="14.0" left="14.0" right="14.0" />
-    </padding>
+   <top>
+      <BorderPane prefHeight="60.0" prefWidth="753.0" BorderPane.alignment="CENTER">
+         <bottom>
+              <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                  <items>
+                      <Button fx:id="btnNew" mnemonicParsing="false" onAction="#newAction" prefHeight="25.0" prefWidth="75.0" text="New" />
+                      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Records" />
+                      <Separator prefHeight="30.0" prefWidth="24.0" />
+                      <TextField />
+                      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Find" />
+                  </items>
+              </ToolBar>
+         </bottom>
+         <top>
+            <MenuBar BorderPane.alignment="CENTER">
+              <menus>
+                <Menu mnemonicParsing="false" text="File">
+                  <items>
+                    <MenuItem mnemonicParsing="false" onAction="#closeAction" text="Close" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Edit">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="Delete" />
+                  </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                  <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                  </items>
+                </Menu>
+              </menus>
+            </MenuBar>
+         </top>
+      </BorderPane>
+   </top>
 </BorderPane>
