Add table view column filtering

--- a/src/main/resources/fxml/EmployeeEditor.fxml
+++ b/src/main/resources/fxml/EmployeeEditor.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<SplitPane dividerPositions="0.4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeEditorController">
+<SplitPane fx:id="employeeEditorPane" dividerPositions="0.4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeEditorController">
     <items>
       <BorderPane prefHeight="200.0" prefWidth="200.0">
          <center>
