--- a/src/main/resources/fxml/CompanyList.fxml
+++ b/src/main/resources/fxml/CompanyList.fxml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane fx:id="companyListPane" fx:controller="ph.petrologisticscorp.finalsalary.controller.CompanyListController"
-            maxHeight="-Infinity"
-            maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="427.0"
-            xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="companyListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="368.0" prefWidth="265.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.CompanyListController">
     <center>
-        <TableView fx:id="tableViewCompanies" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <TableView fx:id="tableViewCompanies" prefHeight="400.0" prefWidth="267.0" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn fx:id="colName" prefWidth="261.0" text="Name"/>
-                <TableColumn fx:id="colNoOfEmployees" minWidth="0.0" prefWidth="158.0" text="No. of Employees"/>
+                <TableColumn fx:id="colName" prefWidth="260.0" text="Name" />
             </columns>
         </TableView>
     </center>
+   <top>
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+        <items>
+          <Button mnemonicParsing="false" onAction="#newEntryAction" text="New Entry" />
+        </items>
+      </ToolBar>
+   </top>
 </BorderPane>
