--- a/src/main/resources/fxml/EmployeeList.fxml
+++ b/src/main/resources/fxml/EmployeeList.fxml
@@ -31,7 +31,7 @@
               <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                   <items>
                       <Button fx:id="btnNew" mnemonicParsing="false" onAction="#newAction" prefHeight="25.0" prefWidth="75.0" text="New" />
-                      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="108.0" text="Companies" />
+                      <Button mnemonicParsing="false" onAction="#companiesAction" prefHeight="25.0" prefWidth="108.0" text="Companies" />
                       <Separator prefHeight="30.0" prefWidth="24.0" />
                   </items>
               </ToolBar>
@@ -41,7 +41,7 @@
               <menus>
                 <Menu mnemonicParsing="false" text="File">
                   <items>
-                    <MenuItem mnemonicParsing="false" onAction="#closeAction" text="New Employee" />
+                    <MenuItem mnemonicParsing="false" onAction="#menuItemNew" text="New Employee" />
                         <MenuItem mnemonicParsing="false" onAction="#closeAction" text="Close" />
                   </items>
                 </Menu>
