Add area list and editor support

--- a/src/main/resources/fxml/EmployeeList.fxml
+++ b/src/main/resources/fxml/EmployeeList.fxml
@@ -10,50 +10,58 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:id="employeeListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeListController">
+<BorderPane fx:id="employeeListPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.211"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeListController">
     <center>
         <TableView fx:id="tableViewEmployees" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <columns>
-                <TableColumn fx:id="colCode" prefWidth="75.0" text="Code" />
-                <TableColumn fx:id="colLastName" prefWidth="100.0" text="Last Name" />
-                <TableColumn fx:id="colFirstName" prefWidth="100.0" text="First Name" />
-                <TableColumn fx:id="colMidInitial" prefWidth="50.0" text="MI" />
-                <TableColumn fx:id="colCompany" prefWidth="200.0" text="Company" />
-                <TableColumn fx:id="colArea" prefWidth="100.0" text="Area" />
-                <TableColumn fx:id="colHireDate" text="Hire Date" />
-                <TableColumn fx:id="colStatus" prefWidth="75.0" text="Status" />
+                <TableColumn fx:id="colCode" prefWidth="75.0" text="Code"/>
+                <TableColumn fx:id="colLastName" prefWidth="100.0" text="Last Name"/>
+                <TableColumn fx:id="colFirstName" prefWidth="100.0" text="First Name"/>
+                <TableColumn fx:id="colMidInitial" prefWidth="50.0" text="MI"/>
+                <TableColumn fx:id="colCompany" prefWidth="200.0" text="Company"/>
+                <TableColumn fx:id="colArea" prefWidth="100.0" text="Area"/>
+                <TableColumn fx:id="colHireDate" text="Hire Date"/>
+                <TableColumn fx:id="colStatus" prefWidth="75.0" text="Status"/>
             </columns>
         </TableView>
     </center>
-   <top>
-      <BorderPane prefHeight="60.0" prefWidth="753.0" BorderPane.alignment="CENTER">
-         <bottom>
-              <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                  <items>
-                      <Button fx:id="btnNew" mnemonicParsing="false" onAction="#newAction" prefHeight="25.0" prefWidth="75.0" text="New" />
-                      <Button mnemonicParsing="false" onAction="#companiesAction" prefHeight="25.0" prefWidth="108.0" text="Companies" />
-                      <Separator prefHeight="30.0" prefWidth="24.0" />
-                  </items>
-              </ToolBar>
-         </bottom>
-         <top>
-            <MenuBar BorderPane.alignment="CENTER">
-              <menus>
-                <Menu mnemonicParsing="false" text="File">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#menuItemNew" text="New Employee" />
-                        <MenuItem mnemonicParsing="false" onAction="#closeAction" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Report" />
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#aboutAction" text="About" />
-                  </items>
-                </Menu>
-              </menus>
-            </MenuBar>
-         </top>
-      </BorderPane>
-   </top>
+    <top>
+        <BorderPane prefHeight="60.0" prefWidth="753.0" BorderPane.alignment="CENTER">
+            <bottom>
+                <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <items>
+                        <Button fx:id="btnNew" mnemonicParsing="false" onAction="#newAction" prefHeight="25.0"
+                                prefWidth="100.0" text="New"/>
+                        <Separator layoutX="322.0" layoutY="10.0" prefHeight="30.0" prefWidth="24.0"/>
+                        <Button mnemonicParsing="false" onAction="#companiesAction" prefHeight="25.0" prefWidth="100.0"
+                                text="Companies"/>
+                        <Button mnemonicParsing="false" onAction="#areasAction" prefHeight="25.0" prefWidth="100.0"
+                                text="Areas"/>
+                        <Separator prefHeight="30.0" prefWidth="24.0"/>
+                    </items>
+                </ToolBar>
+            </bottom>
+            <top>
+                <MenuBar BorderPane.alignment="CENTER">
+                    <menus>
+                        <Menu mnemonicParsing="false" text="File">
+                            <items>
+                                <MenuItem mnemonicParsing="false" onAction="#menuItemNew" text="New Employee"/>
+                                <MenuItem mnemonicParsing="false" onAction="#closeAction" text="Close"/>
+                            </items>
+                        </Menu>
+                        <Menu mnemonicParsing="false" text="Report"/>
+                        <Menu mnemonicParsing="false" text="Help">
+                            <items>
+                                <MenuItem mnemonicParsing="false" onAction="#aboutAction" text="About"/>
+                            </items>
+                        </Menu>
+                    </menus>
+                </MenuBar>
+            </top>
+        </BorderPane>
+    </top>
 </BorderPane>
