--- a/src/main/resources/reports/Salaries.jrxml
+++ b/src/main/resources/reports/Salaries.jrxml
@@ -20,7 +20,7 @@
         <![CDATA[SELECT E.ID, CODE, LAST_NAME, FIRST_NAME, MIDDLE_NAME, SALARY, SINKING, CANTEEN, ROUND((SALARY - (CANTEEN+SINKING)), 2) NET_PAY
 FROM EMPLOYEE E
          JOIN SALARY S
-              ON S.ID = (SELECT ID FROM SALARY SAL WHERE E.ID = SAL.EMPLOYEE_ID ORDER BY SAL.DURATION_FROM, SAL.DURATION_TO DESC LIMIT 1)
+              ON S.ID = (SELECT ID FROM SALARY SAL WHERE E.ID = SAL.EMPLOYEE_ID AND SAL.DURATION_FROM >= $P{DATE_FROM} AND SAL.DURATION_TO <= $P{DATE_TO} ORDER BY SAL.DURATION_TO DESC LIMIT 1)
 WHERE S.DURATION_FROM BETWEEN $P{DATE_FROM} AND $P{DATE_TO} AND S.DURATION_TO BETWEEN $P{DATE_FROM} AND $P{DATE_TO} AND E.AREA_ID = $P{AREA_ID} AND E.COMPANY_ID = $P{COMPANY_ID}]]>
     </queryString>
     <field name="ID" class="java.lang.Integer">
