--- a/src/main/resources/fxml/EmployeeEditor.fxml
+++ b/src/main/resources/fxml/EmployeeEditor.fxml
@@ -3,81 +3,91 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<SplitPane fx:id="employeeEditorPane" dividerPositions="0.4" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeEditorController">
+<SplitPane fx:id="employeeEditorPane" dividerPositions="0.4" maxHeight="-Infinity" maxWidth="-Infinity"
+           minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="650.0"
+           xmlns="http://javafx.com/javafx/8.0.211" xmlns:fx="http://javafx.com/fxml/1"
+           fx:controller="ph.petrologisticscorp.finalsalary.controller.EmployeeEditorController">
     <items>
-      <BorderPane prefHeight="200.0" prefWidth="200.0">
-         <center>
-            <GridPane hgap="10.0" prefHeight="373.0" prefWidth="227.0" BorderPane.alignment="CENTER">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="10.0" prefWidth="70.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="156.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label text="Code" />
-                  <Label layoutX="10.0" layoutY="22.0" text="Last Name" GridPane.rowIndex="1" />
-                  <Label layoutX="20.0" layoutY="80.0" text="First Name" GridPane.rowIndex="2" />
-                  <Label layoutX="20.0" layoutY="31.0" text="Middle Initial" GridPane.rowIndex="3">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Label>
-                  <Label layoutX="20.0" layoutY="31.0" text="Company" GridPane.rowIndex="4" />
-                  <Label layoutX="20.0" layoutY="31.0" text="Area" GridPane.rowIndex="5" />
-                  <Label layoutX="20.0" layoutY="31.0" text="Hire Date" GridPane.rowIndex="6" />
-                  <Label layoutX="20.0" layoutY="31.0" text="Status" GridPane.rowIndex="7" />
-                  <TextField fx:id="txtCode" disable="true" GridPane.columnIndex="1" />
-                  <TextField fx:id="txtLastName" layoutX="163.0" layoutY="32.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="txtMidInitial" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <ComboBox fx:id="cmbCompany" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <ComboBox fx:id="cmbArea" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <DatePicker fx:id="txtHireDate" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <TextField fx:id="txtStatus" disable="true" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-               </children>
-               <padding>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </GridPane>
-         </center>
-         <bottom>
-            <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-              <buttons>
-                <Button fx:id="btnSave" mnemonicParsing="false" onAction="#save" text="Save" />
-              </buttons>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </ButtonBar>
-         </bottom></BorderPane>
+        <BorderPane prefHeight="200.0" prefWidth="200.0">
+            <center>
+                <GridPane hgap="10.0" prefHeight="373.0" prefWidth="227.0" BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="108.0" minWidth="10.0" prefWidth="70.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="156.0"/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                    </rowConstraints>
+                    <children>
+                        <Label text="Code"/>
+                        <Label layoutX="10.0" layoutY="22.0" text="Last Name" GridPane.rowIndex="1"/>
+                        <Label layoutX="20.0" layoutY="80.0" text="First Name" GridPane.rowIndex="2"/>
+                        <Label layoutX="20.0" layoutY="31.0" text="Middle Initial" GridPane.rowIndex="3">
+                            <GridPane.margin>
+                                <Insets/>
+                            </GridPane.margin>
+                        </Label>
+                        <Label layoutX="20.0" layoutY="31.0" text="Company" GridPane.rowIndex="4"/>
+                        <Label layoutX="20.0" layoutY="31.0" text="Area" GridPane.rowIndex="5"/>
+                        <Label layoutX="20.0" layoutY="31.0" text="Hire Date" GridPane.rowIndex="6"/>
+                        <Label layoutX="20.0" layoutY="31.0" text="Status" GridPane.rowIndex="7"/>
+                        <TextField fx:id="txtCode" disable="true" GridPane.columnIndex="1"/>
+                        <TextField fx:id="txtLastName" layoutX="163.0" layoutY="32.0" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="1"/>
+                        <TextField fx:id="txtFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <TextField fx:id="txtMidInitial" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                        <ComboBox fx:id="cmbCompany" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+                        <ComboBox fx:id="cmbArea" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                        <DatePicker fx:id="txtHireDate" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+                        <TextField fx:id="txtStatus" disable="true" editable="false" GridPane.columnIndex="1"
+                                   GridPane.rowIndex="7"/>
+                    </children>
+                    <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    </padding>
+                </GridPane>
+            </center>
+            <bottom>
+                <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                    <buttons>
+                        <Button fx:id="btnSave" mnemonicParsing="false" onAction="#save" text="Save"/>
+                    </buttons>
+                    <opaqueInsets>
+                        <Insets/>
+                    </opaqueInsets>
+                    <padding>
+                        <Insets right="10.0"/>
+                    </padding>
+                </ButtonBar>
+            </bottom>
+        </BorderPane>
         <BorderPane prefHeight="398.0" prefWidth="338.0">
             <center>
-                <TableView fx:id="tableViewEmployeeSalaries" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                <TableView fx:id="tableViewEmployeeSalaries" prefHeight="200.0" prefWidth="200.0"
+                           BorderPane.alignment="CENTER">
                     <columns>
-                        <TableColumn fx:id="colSalary" prefWidth="75.0" text="Salary" />
-                        <TableColumn fx:id="colSinking" prefWidth="75.0" text="Sinking" />
-                        <TableColumn fx:id="colCanteen" prefWidth="75.0" text="Canteen" />
-                        <TableColumn fx:id="colFrom" prefWidth="75.0" text="From" />
-                        <TableColumn fx:id="colTo" prefWidth="75.0" text="To" />
+                        <TableColumn fx:id="colSalary" prefWidth="75.0" text="Salary"/>
+                        <TableColumn fx:id="colSinking" prefWidth="75.0" text="Sinking"/>
+                        <TableColumn fx:id="colCanteen" prefWidth="75.0" text="Canteen"/>
+                        <TableColumn fx:id="colFrom" prefWidth="75.0" text="From"/>
+                        <TableColumn fx:id="colTo" prefWidth="75.0" text="To"/>
                     </columns>
                 </TableView>
             </center>
             <top>
                 <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <items>
-                        <Button fx:id="btnSalaryNew" mnemonicParsing="false" onAction="#showSalaryDialog" text="New Salary" />
+                        <Button fx:id="btnSalaryNew" mnemonicParsing="false" onAction="#showSalaryDialog"
+                                text="New Salary"/>
+                        <Button fx:id="btnLeaveAction" mnemonicParsing="false" text="Set Leave"
+                                onAction="#showLeaveDialog"/>
                     </items>
                 </ToolBar>
             </top>
